--- a/css/default.css
+++ b/css/default.css
@@ -1,9 +1,9 @@
 :root {
- --cor-primaria	 : #333333;
- --cor-secundario:  #f9c511!important;
- --cor-fundo-menu: #121212;
- --cor-fundo-menu-media: #111111;
- --cor-fonte-menu: #FFFFFF;
- --cor-fonte-menu-hover: #f9c511!important;
- --font-text: "sariamedium";
+    --cor-primaria: #333333;
+    --cor-secundario: #484848!important;
+    --cor-fundo-menu: #121212;
+    --cor-fundo-menu-media: #111111;
+    --cor-fonte-menu: #FFFFFF;
+    --cor-fonte-menu-hover: #484848!important;
+    --font-text: "sariamedium";
 }
