--- a/css/styles.css
+++ b/css/styles.css
@@ -3124,7 +3124,7 @@ td:last-child {
     width: var(--logo-width);
     margin: 0;
     vertical-align: bottom;
-    width: 3vw;
+    width: 50px;
 }
 
 /* --------------------------------------------------------------------
